# src/swagger/example_responses/get_user_info.ts
@@ -1,0 +1,19 @@
+export const get_user_info_example = {
+    "cover_photo_url": "https://cdn1.suno.ai/b9d59cde.webp",
+    "user_inputted_genres": [
+        "Rap",
+        "Hip-Hop",
+        "EDM",
+        "Pop"
+    ],
+    "section_order": [
+        "hooks",
+        "pinned_songs",
+        "songs",
+        "playlists",
+        "personas"
+    ],
+    "spotify_link": "open.spotify.com/artist/4IV82Sy3wa0My09391S4WF",
+    "x_link": "https://x.com/Dray_AI",
+    "youtube_link": "https://www.youtube.com/@DrayStation"
+};
