# src/swagger/openapi.json
@@ -6,7 +6,7 @@
   },
   "servers": [
     {
-      "url": "http://localhost:3000",
+      "url": "http://localhost:8000",
       "description": "Suno API"
     }
   ],
@@ -292,7 +292,7 @@
                 "explicit": false,
                 "comment_count": 10,
                 "flag_count": 0,
-                "created_at": "2025-12-03T08:47:28.489Z",
+                "created_at": "2025-12-03T11:17:07.894Z",
                 "status": "active",
                 "title": "Song Title",
                 "play_count": 1000,
@@ -3676,6 +3676,35 @@
             }
           ]
         }
+      },
+      "UserInfo": {
+        "type": "object",
+        "properties": {
+          "cover_photo_url": {
+            "type": "string"
+          },
+          "user_inputted_genres": {
+            "type": "array",
+            "items": {
+              "type": "string"
+            }
+          },
+          "section_order": {
+            "type": "array",
+            "items": {
+              "type": "string"
+            }
+          },
+          "spotify_link": {
+            "type": "string"
+          },
+          "x_link": {
+            "type": "string"
+          },
+          "youtube_link": {
+            "type": "string"
+          }
+        }
       }
     },
     "parameters": {}
@@ -3878,6 +3907,55 @@
               "application/json": {
                 "schema": {
                   "$ref": "#/components/schemas/Comment"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/user/info/{userId}": {
+      "get": {
+        "summary": "Get user profile info",
+        "tags": [
+          "Users"
+        ],
+        "parameters": [
+          {
+            "name": "userId",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "A user profile info response",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/UserInfo"
+                },
+                "example": {
+                  "cover_photo_url": "https://cdn1.suno.ai/b9d59cde.webp",
+                  "user_inputted_genres": [
+                    "Rap",
+                    "Hip-Hop",
+                    "EDM",
+                    "Pop"
+                  ],
+                  "section_order": [
+                    "hooks",
+                    "pinned_songs",
+                    "songs",
+                    "playlists",
+                    "personas"
+                  ],
+                  "spotify_link": "open.spotify.com/artist/4IV82Sy3wa0My09391S4WF",
+                  "x_link": "https://x.com/Dray_AI",
+                  "youtube_link": "https://www.youtube.com/@DrayStation"
                 }
               }
             }
